# rust-wasm-template

./: .gitignore  Cargo.toml  index.js  package.json
public/: index.html
src/: main.rs
src/components/: button.rs  image.rs  mod.rs  slider.rs
src/enums/: language.rs  layout.rs  message.rs  mod.rs  step.rs  step_message.rs
src/structs/: mod.rs  steps.rs
