[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
iced = {version = "0.9.0", features = ["image", "debug"]}
iced_web = "0.4.0"
wasm-bindgen = "0.2.84"
